--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,5 +1,11 @@
 <h1>Hello, This is my Portfolio</h1>
 
+{% load static %}
+
+<a href="{% static 'portfolio/computers.png' %">Resume</a>
+
+<img src="{% static 'portfolio/cute.jpg' %}">
+
 {% for project in projects %}
 
 <h2>{{ project.title }}</h2>
